--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,4 +24,12 @@
         app:headerLayout="@layout/nav_header_main"
         app:menu="@menu/activity_main_drawer" />
 
+    <!--<com.facebook.login.widget.ProfilePictureView
+        android:id="@+id/fbProfilePicture"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"></com.facebook.login.widget.ProfilePictureView>
+    <TextView
+        android:id="@+id/nome"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />-->
 </android.support.v4.widget.DrawerLayout>
