--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,5 +18,10 @@
         android:layout_marginTop="150dp"
         />
 
-
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/gglLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="150dp"/>
 </LinearLayout>
