--- a/app/src/main/res/layout/activity_categoria_local.xml
+++ b/app/src/main/res/layout/activity_categoria_local.xml
@@ -4,8 +4,7 @@
     android:id="@+id/activity_categoria_local"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.loremipsum.recifeguide.CategoriaLocalActivity">
+    android:orientation="vertical">
 
 
     <GridView
