--- a/app/src/main/res/layout/activity_local_detalhe.xml
+++ b/app/src/main/res/layout/activity_local_detalhe.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+<RelativeLayout
     android:id="@+id/activity_local_detalhe"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -25,7 +29,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/nomeLocal"
-        android:layout_above="@+id/botaoAudio"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
@@ -40,14 +43,6 @@
 
     </ScrollView>
 
-    <Button
-        android:id="@+id/botaoAudio"
-        android:layout_height="100dp"
-        android:layout_marginBottom="20dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_width="100dp" />
-
     <TextView
         android:id="@id/nomeLocal"
         android:text="Nome local aqui"
@@ -60,3 +55,4 @@
 
 
 </RelativeLayout>
+</ScrollView>
