--- a/app/src/main/res/layout/activity_local_detalhe.xml
+++ b/app/src/main/res/layout/activity_local_detalhe.xml
@@ -4,55 +4,64 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<RelativeLayout
+    android:layout_height="match_parent"
+   >
+
+<LinearLayout
     android:id="@+id/activity_local_detalhe"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.loremipsum.recifeguide.LocalDetalheActivity">
 
     <ImageView
         android:id="@+id/imagemLocal"
-        android:layout_width="400dp"
+        android:layout_width="match_parent"
         android:layout_height="400dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+    />
 
-    <ScrollView
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/nomeLocal"
+        android:text="Nome local aqui"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/nomeLocal"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:textSize="24sp"
+
+        />
 
         <TextView
             android:id="@+id/descricaoLocal"
             android:text="Descrição local aqui"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="0dp" />
-
-    </ScrollView>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+        />
 
     <TextView
-        android:id="@id/nomeLocal"
-        android:text="Nome local aqui"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="24sp"
-        android:layout_below="@+id/imagemLocal"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:text="Horário de Abertura:"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/textView12"
+        android:textAppearance="@style/TextAppearance.AppCompat" />
+
+    <TextView
+            android:text=""
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/horarioAbertura" />
+
+    <TextView
+            android:text="Horário de Fechamento:"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/textView14"
+            android:textAppearance="@style/TextAppearance.AppCompat" />
+
+    <TextView
+            android:text=""
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/horarioFechamento" />
 
 
-</RelativeLayout>
+</LinearLayout>
 </ScrollView>
