--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -13,22 +13,29 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
-        android:id="@+id/fbProfilePicture"
+        android:id="@+id/gglImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@android:drawable/sym_def_app_icon" />
+        app:srcCompat="@android:drawable/sym_def_app_icon"
+        />
 
+    <com.facebook.login.widget.ProfilePictureView
+        android:id="@+id/fbImage"
+        android:layout_width="150px"
+        android:layout_height="150px"
+        android:paddingTop="@dimen/nav_header_vertical_spacing"
+        app:srcCompat="@android:drawable/sym_def_app_icon"
+        android:visibility="gone"/>
     <TextView
         android:id="@+id/meu_nome"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="Meu Nome"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/meu_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Meu Email" />
