--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         app:srcCompat="@android:drawable/sym_def_app_icon"
-        android:visibility="invisible"/>
+        android:visibility="gone"/>
 
     <com.facebook.login.widget.ProfilePictureView
         android:id="@+id/fbImage"
